@@ -20,7 +20,7 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.006000
-Test2         = 0.000039
+Test2         = 0.000040
 Test::Harness = 2.03
 Scalar::Util  = 1.13
 
