@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Support subtest identification for events
+    - Bump minimum Test2 version
+
 1.302013_016 2016-04-04 21:33:20-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Support some newer event features from Test2
